--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <input type="range" min="0" max="100" value="50" id="volume-bar">
                   <i class="fas fa-volume-up"></i>
               </div>
-              <h2 class="sub-board-heading">Cver(Cậu Vải) test app user nào có ý tưởng cho app thì ib vải nha</h2>
+              <!-- <h2 class="sub-board-heading">Cver(Cậu Vải) test app user nào có ý tưởng cho app thì ib vải nha</h2> -->
              <div id="effect-board">
                   <div class="effect-items">
                       <p>City traffic</p>
