--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
       <div class="mySlides w3-display-container">
         <img src="images/img_la.jpg" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-          <h3>Los Angeles</h3>
-          <p><b>We had the best time playing at Venice Beach!</b></p>
+          <!-- <h3>Los Angeles</h3>
+          <p><b>We had the best time playing at Venice Beach!</b></p> -->
         </div>
       </div>
       <div class="mySlides w3-display-container">
         <img src="images/img_ny.jpg" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-          <h3>New York</h3>
-          <p><b>The atmosphere in New York is lorem ipsum.</b></p>
+          <!-- <h3>New York</h3>
+          <p><b>The atmosphere in New York is lorem ipsum.</b></p> -->
         </div>
       </div>
       <div class="mySlides w3-display-container">
         <img src="images/img_chicago.jpg" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-          <h3>Chicago</h3>
-          <p><b>Thank you, Chicago - A night we won't forget.</b></p>
+          <!-- <h3>Chicago</h3>
+          <p><b>Thank you, Chicago - A night we won't forget.</b></p> -->
         </div>
       </div>
 
