--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         nhưng nhóm hợp tác rất kém, mục đích quá tầm thường<br>
          nên việc điểm Yon bằng hoặc thấp hơn các bạn là điều tôi không thể chấp nhận</a>
           <a href="#">Tui rất là tức khi thấy nhóm này hoạt động một cách khá là không MƯỢT</a>
-          <a href="#">Cver(ny Yon Hi) Hỗ trợ làm web free</a>
+          <a href="#">Cver(ny Yon Hi) sinh viên năm 1 Hutech hỗ trợ làm web :3 </a>
         </div>
       </li>
       <li class="w3-hide-small w3-right"><a href="javascript:void(0)" class="w3-padding-large w3-hover-red"><i class="fa fa-search"></i></a></li>
